--- a/Bungee.html
+++ b/Bungee.html
@@ -43,16 +43,16 @@
                     Destination
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Manang Mustan</a>
-                    <a class="dropdown-item" href="#">Kathmandu</a>
-                    <a class="dropdown-item" href="#">Pokhara</a>
-                    <a class="dropdown-item" href="#">Chitwan</a>
+                    <a class="dropdown-item" href="./manang.html">Manang Mustan</a>
+                    <a class="dropdown-item" href="./kathmandu.html">Kathmandu</a>
+                    <a class="dropdown-item" href="./Pokhara.html">Pokhara</a>
+                    <a class="dropdown-item" href="./Chitwan.html">Chitwan</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Contact Us <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./Contact.html">Contact Us <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             </div>
