--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <header>
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -52,7 +52,7 @@
                       </div>
                     </li>
                     <li class="nav-item active">
-                      <a class="nav-link btn-outline-primary" href="#">Contact Us <span class="sr-only">(current)</span></a>
+                      <a class="nav-link btn-outline-primary" href="./Contact.html">Contact Us <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 </div>
