--- a/kathmandu.html
+++ b/kathmandu.html
@@ -52,7 +52,7 @@
                     </div>
                   </li>
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Contact Us <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./Contact.html">Contact Us <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             </div>
