--- a/Pokhara.html
+++ b/Pokhara.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item dropdown">
@@ -59,6 +59,44 @@
           </nav>
     </div>
 </header>
+
+
+<section class="bg-dark" >
+  
+  <div class="card-deck">
+    <div class="card">
+      <img src="./IMAGES/PA.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pokhara</h5>
+        <p class="card-text">Pokhara is a city on Phewa Lake, in central Nepal. It’s known as a gateway to the Annapurna Circuit, a popular trail in the Himalayas. Tal Barahi Temple, a 2-story pagoda, sits on an island in the lake. On the eastern shore, the Lakeside district has yoga centers and restaurants. In the city’s south, the International Mountain Museum has exhibits on the history of mountaineering and the people of the Himalayas.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/PA4.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">pokhara</h5>
+        <p class="card-text">Pokhara is a city on Phewa Lake, in central Nepal. It’s known as a gateway to the Annapurna Circuit, a popular trail in the Himalayas. Tal Barahi Temple, a 2-story pagoda, sits on an island in the lake. On the eastern shore, the Lakeside district has yoga centers and restaurants. In the city’s south, the International Mountain Museum has exhibits on the history of mountaineering and the people of the Himalayas.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/PA5.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pokhara</h5>
+        <p class="card-text">Pokhara is a city on Phewa Lake, in central Nepal. It’s known as a gateway to the Annapurna Circuit, a popular trail in the Himalayas. Tal Barahi Temple, a 2-story pagoda, sits on an island in the lake. On the eastern shore, the Lakeside district has yoga centers and restaurants. In the city’s south, the International Mountain Museum has exhibits on the history of mountaineering and the people of the Himalayas.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+
+</section>
 
 <script src="./js/jquary.js" ></script>
     <script src="js/popper.js" ></script>
