--- a/home.html
+++ b/home.html
@@ -59,45 +59,12 @@
           </nav>
     </div>
 </header>
+<script src="./js/jquary.js" ></script>
+    <script src="js/popper.js" ></script>
+    <script src="./js/bootstrap.min.js" ></script>
+</body>
 
-
-<section class="bg-dark" >
-  
-  <div class="card-deck">
-    <div class="card">
-      <img src="./IMAGES/KA.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Kathmandu</h5>
-        <p class="card-text">Kathmandu, Nepal's capital, is set in a valley surrounded by the Himalayan mountains. At the heart of the old city’s mazelike alleys is Durbar Square, which becomes frenetic during Indra Jatra, a religious festival featuring masked dances. Many of the city's historic sites were damaged or destroyed by a 2015 earthquake. Durbar Square's palace, Hanuman Dhoka, and Kasthamandap, a wooden Hindu temple, are being rebuilt.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img src="./IMAGES/KA2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Kathmandu</h5>
-        <p class="card-text">Kathmandu, Nepal's capital, is set in a valley surrounded by the Himalayan mountains. At the heart of the old city’s mazelike alleys is Durbar Square, which becomes frenetic during Indra Jatra, a religious festival featuring masked dances. Many of the city's historic sites were damaged or destroyed by a 2015 earthquake. Durbar Square's palace, Hanuman Dhoka, and Kasthamandap, a wooden Hindu temple, are being rebuilt.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-    <div class="card">
-      <img src="./IMAGES/KA3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Kathmandu</h5>
-        <p class="card-text"> Kathmandu, Nepal's capital, is set in a valley surrounded by the Himalayan mountains. At the heart of the old city’s mazelike alleys is Durbar Square, which becomes frenetic during Indra Jatra, a religious festival featuring masked dances. Many of the city's historic sites were damaged or destroyed by a 2015 earthquake. Durbar Square's palace, Hanuman Dhoka, and Kasthamandap, a wooden Hindu temple, are being rebuilt.</p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-  </div>
-
-</section>
-
+</html>
 <script src="./js/jquary.js" ></script>
     <script src="js/popper.js" ></script>
     <script src="./js/bootstrap.min.js" ></script>
