--- a/Bungee.html
+++ b/Bungee.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item dropdown">
@@ -59,6 +59,44 @@
           </nav>
     </div>
 </header>
+
+
+<section class="bg-dark" >
+  
+  <div class="card-deck">
+    <div class="card">
+      <img src="./IMAGES/BJ2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bungee</h5>
+        <p class="card-text">The jump takes place from a 166 m wide steel suspension bridge that joins two sides of a deep valley over the raging Bhote Koshi River. ... You can also go for a bungee jump at Hemja, Pokhara. This is Nepal's only tower bungee, high ground bungee and swing, offering various options of bungee jumping.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/BJ.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bungee</h5>
+        <p class="card-text">The jump takes place from a 166 m wide steel suspension bridge that joins two sides of a deep valley over the raging Bhote Koshi River. ... You can also go for a bungee jump at Hemja, Pokhara. This is Nepal's only tower bungee, high ground bungee and swing, offering various options of bungee jumping.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/BJ1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bungee</h5>
+        <p class="card-text">The jump takes place from a 166 m wide steel suspension bridge that joins two sides of a deep valley over the raging Bhote Koshi River. ... You can also go for a bungee jump at Hemja, Pokhara. This is Nepal's only tower bungee, high ground bungee and swing, offering various options of bungee jumping.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+
+</section>
 
 <script src="./js/jquary.js" ></script>
     <script src="js/popper.js" ></script>
