--- a/Chitwan.html
+++ b/Chitwan.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item dropdown">
@@ -59,6 +59,43 @@
           </nav>
     </div>
 </header>
+
+<section class="bg-dark" >
+  
+  <div class="card-deck">
+    <div class="card">
+      <img src="./IMAGES/CA3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Chitwan</h5>
+        <p class="card-text">Chitwan District Nepali: चितवन जिल्ला is one of 77 districts of Nepal, and is located in the southwestern part of Bagmati Pradesh with Bharatpur, the fourth largest city of Nepal, as its district headquarter.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/CA4.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Chitwan</h5>
+        <p class="card-text">Chitwan District Nepali: चितवन जिल्ला is one of 77 districts of Nepal, and is located in the southwestern part of Bagmati Pradesh with Bharatpur, the fourth largest city of Nepal, as its district headquarter.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/CA1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Chitwan</h5>
+        <p class="card-text">Chitwan District Nepali: चितवन जिल्ला is one of 77 districts of Nepal, and is located in the southwestern part of Bagmati Pradesh with Bharatpur, the fourth largest city of Nepal, as its district headquarter.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+
+</section>
 
 <script src="./js/jquary.js" ></script>
     <script src="js/popper.js" ></script>
