--- a/Treeking.html
+++ b/Treeking.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item dropdown">
@@ -43,10 +43,10 @@
                     Destination
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Manang Mustan</a>
-                    <a class="dropdown-item" href="#">Kathmandu</a>
-                    <a class="dropdown-item" href="#">Pokhara</a>
-                    <a class="dropdown-item" href="#">Chitwan</a>
+                    <a class="dropdown-item" href="./manang.html">Manang Mustan</a>
+                    <a class="dropdown-item" href="./kathmandu.html">Kathmandu</a>
+                    <a class="dropdown-item" href="./Pokhara.html">Pokhara</a>
+                    <a class="dropdown-item" href="./Chitwan.html">Chitwan</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
@@ -59,6 +59,43 @@
           </nav>
     </div>
 </header>
+
+<section class="bg-dark" >
+  
+  <div class="card-deck">
+    <div class="card">
+      <img src="./IMAGES/TA.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Treeking</h5>
+        <p class="card-text">Trekking is the most popular activity in Nepal, and travellers will be bombarded on the streets of Kathmandu and the trekking hub, Pokhara, with guides, organised tours and gear for sale or rent. The huge variety of options allows for people of many ages and capabilities to attempt a trek in the country.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/TA2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Treeking</h5>
+        <p class="card-text">Trekking is the most popular activity in Nepal, and travellers will be bombarded on the streets of Kathmandu and the trekking hub, Pokhara, with guides, organised tours and gear for sale or rent. The huge variety of options allows for people of many ages and capabilities to attempt a trek in the country.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/TA1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Trekking</h5>
+        <p class="card-text">Trekking is the most popular activity in Nepal, and travellers will be bombarded on the streets of Kathmandu and the trekking hub, Pokhara, with guides, organised tours and gear for sale or rent. The huge variety of options allows for people of many ages and capabilities to attempt a trek in the country.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+
+</section>
 
 <script src="./js/jquary.js" ></script>
     <script src="js/popper.js" ></script>
