--- a/manang.html
+++ b/manang.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item dropdown">
@@ -59,6 +59,44 @@
           </nav>
     </div>
 </header>
+
+
+<section class="bg-dark" >
+  
+  <div class="card-deck">
+    <div class="card">
+      <img src="./IMAGES/MA.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Manang Mustan</h5>
+        <p class="card-text">Manang Mustang Trekking is the exceptional trekking exploring varied Himalayan snow capped peaks. ... As Manang Mustang is also Himalayan valley. With the broad valley of the Marshyangdi River presents Stunning view of Annapurna mountain range. At the west of Mustang there is the 5,416 metres elevated Thorong La Pas</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/MA2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Manang Mustan</h5>
+        <p class="card-text">Manang Mustang Trekking is the exceptional trekking exploring varied Himalayan snow capped peaks. ... As Manang Mustang is also Himalayan valley. With the broad valley of the Marshyangdi River presents Stunning view of Annapurna mountain range. At the west of Mustang there is the 5,416 metres elevated Thorong La Pass.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./IMAGES/MA3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Manang Mustang</h5>
+        <p class="card-text">Manang Mustang Trekking is the exceptional trekking exploring varied Himalayan snow capped peaks. ... As Manang Mustang is also Himalayan valley. With the broad valley of the Marshyangdi River presents Stunning view of Annapurna mountain range. At the west of Mustang there is the 5,416 metres elevated Thorong La Pass.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+
+</section>
 
 <script src="./js/jquary.js" ></script>
     <script src="js/popper.js" ></script>
