--- a/paragliding.html
+++ b/paragliding.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link btn-outline-primary" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link btn-outline-primary" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item dropdown">
@@ -43,10 +43,10 @@
                     Destination
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Manang Mustan</a>
-                    <a class="dropdown-item" href="#">Kathmandu</a>
-                    <a class="dropdown-item" href="#">Pokhara</a>
-                    <a class="dropdown-item" href="#">Chitwan</a>
+                    <a class="dropdown-item" href="./manang.html">Manang Mustan</a>
+                    <a class="dropdown-item" href="./kathmandu.html">Kathmandu</a>
+                    <a class="dropdown-item" href="./Pokhara.html">Pokhara</a>
+                    <a class="dropdown-item" href="./Chitwan.html">Chitwan</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
